== In Git

=== New Features
* Pure Java FilterFormatter. (Aslak Hellesøy)

== 2.1.5 (2010-07-17)

=== Bugfixes
* Line filter works on JRuby with Scenarios without steps. (Aslak Hellesøy)

=== Changed Features
* The JSON schema now puts background inside the "elements" Array. Makes parsing simpler. (Aslak Hellesøy)

== 2.1.4 (2010-07-14)

=== Bugfixes
* #steps fails on JRuby with 2.1.3 (#68 Aslak Hellesøy)

== 2.1.3 (2010-07-14)

=== Bugfixes
* Examples are not cleared when an ignored Scenario Outline/Examples is followed by a Scenario. (#67 Aslak Hellesøy)

== 2.1.2 (2010-07-13)

=== Bugfixes
* Fix some missing require statements that surfaced when gherkin was used outside Cucumber. (Aslak Hellesøy)

== 2.1.1 (2010-07-12)

The previous release had a missing gherkin.jar in the jruby gem. This release fixes that. For good this time!

== 2.1.0 (2010-07-12)

=== New Features
* Pirate! (anteaya)
* Tag limits for negative tags (Aslak Hellesøy)

=== Changed Features
* The formatter API has changed and the listener API is now only used internally. (Aslak Hellesøy)

=== Removed Features
* FilterListener has been replaced with FilterFormatter. Currently only in Ruby (no Java impl yet). (Aslak Hellesøy)

== 2.0.2 (2010-06-16)

=== New Features
* New JSON Lexer. (Gregory Hnatiuk)

=== Bugfixes
* Fixed incorrect indentation for descriptions in Java. (Aslak Hellesøy)
* Fixed support for xx-yy languages and Hebrew and Indonesian (JDK bugs). (Aslak Hellesøy)

=== Changed Features
* Examples are now nested inside the Scenario Outline in the JSON format. (Gregory Hnatiuk)

== 2.0.1 (2010-06-15)

The previous release had a missing gherkin.jar in the jruby gem. This release fixes that.

== 2.0.0 (2010-06-15)

We're breaking the old listener API in this release, and added a new JSON formatter,
which calls for a new major version.

=== New Features
* New JSON formatter. (Aslak Hellesøy, Joseph Wilk)
* New synonyms for Hungarian (Bence Golda)