@@ -1,0 +1,7 @@
+package gherkin.formatter.model;
+
+import java.util.List;
+
+public interface CommentHolder {
+    List<Comment> getComments();
+}
