@@ -1,0 +1,3 @@
+if defined?(JRUBY_VERSION)
+  require ENV['HOME'] + '/.m2/repository/com/googlecode/json-simple/json-simple/1.1/json-simple-1.1.jar'
+end
