@@ -2,6 +2,7 @@
 
 === New Features
 * Pure Java FilterFormatter. (Aslak Hellesøy)
+* Pure Java JSONFormatter. (Aslak Hellesøy)
 
 == 2.1.5 (2010-07-17)
 
